--- a/KoKoAlarm/res/layout/addalarm.xml
+++ b/KoKoAlarm/res/layout/addalarm.xml
@@ -13,9 +13,9 @@
         android:text="알람 추가" />
 
     <ListView
-        android:id="@+id/listView"
+        android:id="@+id/listView1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="match_parent" >
     </ListView>
 
 </LinearLayout>
