--- a/KoKoAlarm/res/layout/settingalarm2.xml
+++ b/KoKoAlarm/res/layout/settingalarm2.xml
@@ -31,10 +31,22 @@
         
 
     </LinearLayout>
-<ToggleButton
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <ToggleButton
             android:id="@+id/toggleButton1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
             android:text="ToggleButton" />
+
+        <Button
+            android:id="@+id/btnDelete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="삭제" />
+
+    </LinearLayout>
 </LinearLayout>
