--- a/KoKoAlarm/res/layout/startalarm.xml
+++ b/KoKoAlarm/res/layout/startalarm.xml
@@ -2,16 +2,23 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/start"
+    android:background="@drawable/background"
     android:orientation="vertical" >
 
-    <ImageButton
+    <Button
         android:id="@+id/btnAlarm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/koko1" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:background="#00000000"
-        android:src="@drawable/koko1" />
+        android:layout_marginTop="24dp"
+        android:textColor="#000000"
+        android:textSize="35dp"
+        android:text="Catch Me ! ! !" />
 
 </RelativeLayout>
