데이터베이스 성공

--- a/KoKoAlarm/res/layout/main.xml
+++ b/KoKoAlarm/res/layout/main.xml
@@ -5,14 +5,31 @@
     android:background="@drawable/first"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/textView1"
+    <ImageView
+        android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginBottom="58dp"
-        android:layout_marginLeft="37dp"
+        android:src="@drawable/house" />
+
+    <ImageButton
+        android:id="@+id/imgbtnway"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/imageView1"
+        android:layout_marginRight="14dp"
+        android:background="#00000000"
+        android:src="@drawable/wayicon" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/imgbtnway"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="26dp"
         android:text="꼬꼬를 클릭해 주세요" />
 
     <ImageButton
@@ -23,15 +40,5 @@
         android:layout_alignParentLeft="true"
         android:background="#00000000"
         android:src="@drawable/custom_btn" />
-
-    <ImageButton
-        android:id="@+id/imgbtnway"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/textView1"
-        android:layout_marginRight="14dp"
-        android:background="#00000000"
-        android:src="@drawable/wayicon" />
 
 </RelativeLayout>
